fixing the merge